--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -300,6 +300,10 @@
     <Compile Include="Migrations\201603210641239_AddUserRegistrationTimestamp.Designer.cs">
       <DependentUpon>201603210641239_AddUserRegistrationTimestamp.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201603230005459_SlideIdIsGuid.cs" />
+    <Compile Include="Migrations\201603230005459_SlideIdIsGuid.Designer.cs">
+      <DependentUpon>201603230005459_SlideIdIsGuid.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\CommentLike.cs" />
     <Compile Include="Models\CommentPolicy.cs" />
@@ -694,6 +698,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201603210641239_AddUserRegistrationTimestamp.resx">
       <DependentUpon>201603210641239_AddUserRegistrationTimestamp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201603230005459_SlideIdIsGuid.resx">
+      <DependentUpon>201603230005459_SlideIdIsGuid.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
