--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -30,4 +30,5 @@
   <package id="System.Text.Encoding" version="4.0.0" targetFramework="net45" />
   <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
+  <package id="UnidecodeSharp" version="1.0.0.0" targetFramework="net45" />
 </packages>
