Course versions updates
Bugfix: course updates with correct CourseId
Courses not coping to Courses.Staging after build
Show Diagnostics page before each version publishing
Publish version from Diagnostics page

--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -92,6 +92,7 @@
     <Compile Include="CollectionExtensions.cs" />
     <Compile Include="CommentAfterExerciseIsSolved.cs" />
     <Compile Include="Course.cs" />
+    <Compile Include="CourseDiff.cs" />
     <Compile Include="CourseLoader.cs" />
     <Compile Include="CourseSettings.cs" />
     <Compile Include="CourseManager.cs" />
