--- a/src/courses/Help/Help.csproj
+++ b/src/courses/Help/Help.csproj
@@ -77,8 +77,7 @@
   <PropertyGroup>
     <PostBuildEvent>REM copy this post build step to new course
 del "$(OutDir)$(ProjectName).zip"
-"$(SolutionDir)..\tools\7z\7za.exe" a -mcu "$(OutDir)$(ProjectName).zip" "$(ProjectDir)Slides\*"
-copy "$(OutDir)$(ProjectName).zip" "$(SolutionDir)uLearn.Web\Courses.Staging\"</PostBuildEvent>
+"$(SolutionDir)..\tools\7z\7za.exe" a -mcu "$(OutDir)$(ProjectName).zip" "$(ProjectDir)Slides\*"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
