LRU-Cache for course versions
1. Special folder for course versions' zip files
2. Clear and delete unzipped files from courses zips
3. Don't load course twice on version publishing
4. 'Back' button on diagnostics page
5. Bugfix: show first not last exception while loading courses

--- a/.gitignore
+++ b/.gitignore
@@ -177,6 +177,7 @@ FakesAssemblies/
 *.Settings.cs
 /src/uLearn.Web/Courses/
 /src/uLearn.Web/Courses.Staging/*.zip
+/src/uLearn.Web/Courses.Versions/*.zip
 /src/UI.Tests/screenshots
 /src/courses/Linq/Generated
 *.received.txt
