--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="LtiLibrary.Core" version="1.5.4" targetFramework="net45" />
@@ -50,6 +51,7 @@
   <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.1.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
