--- a/src/courses/Help/Help.csproj
+++ b/src/courses/Help/Help.csproj
@@ -56,6 +56,7 @@
     <Content Include="Slides\U99_Presentation\S002_sample.quiz.xml" />
     <Content Include="Slides\U99_Presentation\S003_code.lesson.xml" />
     <Content Include="Slides\U99_Presentation\S004_example.lesson.xml" />
+    <Content Include="Slides\U99_Presentation\S005_manual.quiz.xml" />
     <Content Include="Slides\U99_Presentation\Title.txt" />
   </ItemGroup>
   <ItemGroup>
