--- a/src/uLearn.Tests/packages.config
+++ b/src/uLearn.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ApprovalTests" version="3.0.8" targetFramework="net45" />
   <package id="ApprovalUtilities" version="3.0.8" targetFramework="net45" />
+  <package id="FluentAssertions" version="4.9.1" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.1" targetFramework="net45" />
