--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1344,7 +1344,7 @@
     <Content Include="Views\Admin\Comments.cshtml" />
     <Content Include="Views\Admin\ManualQuizChecksQueue.cshtml" />
     <Content Include="Views\Admin\Groups.cshtml" />
-    <Content Include="Views\Account\JoinToGroup.cshtml" />
+    <Content Include="Views\Account\JoinGroup.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
