--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -16,7 +16,7 @@
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings file="private.settings">
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
