--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -6,6 +6,7 @@
   <package id="Jint" version="2.5.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.1" targetFramework="net45" />
