--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Angular.UI.UI-Router" version="0.2.13" targetFramework="net45" />
+  <package id="angularjs" version="1.5.0" targetFramework="net45" />
+  <package id="AngularJS.Animate" version="1.5.0" targetFramework="net45" />
+  <package id="AngularJS.Core" version="1.5.0" targetFramework="net45" />
+  <package id="AngularJS.Resource" version="1.5.0" targetFramework="net45" />
+  <package id="AngularJS.Sanitize" version="1.5.0" targetFramework="net45" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="Unofficial.Ionic.Zip" version="1.9.1.8" targetFramework="net45" />
 </packages>
