--- a/src/RunCsJob.Api/RunCsJob.Api.csproj
+++ b/src/RunCsJob.Api/RunCsJob.Api.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyCreator.cs" />
+    <Compile Include="MSBuildResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunnerSubmition.cs" />
     <Compile Include="RunningResults.cs" />
