--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -44,7 +44,8 @@
 		</compilation>
 		<httpRuntime targetFramework="4.5" maxRequestLength="16000000" />
 		<customErrors mode="Off" />
-
+	
+		<globalization culture="ru-RU" uiCulture="ru" />
 		<httpModules>
 			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
 			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
