--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -134,6 +134,8 @@
     <Compile Include="Model\Blocks\IncludeMdBlock.cs" />
     <Compile Include="Model\Blocks\Label.cs" />
     <Compile Include="Model\Blocks\MdBlock.cs" />
+    <Compile Include="Model\Blocks\ProjectExerciseBlock.cs" />
+    <Compile Include="Model\Blocks\SingleFileExerciseBlock.cs" />
     <Compile Include="Model\Blocks\SlideBlockExtensions.cs" />
     <Compile Include="Model\Blocks\TexBlock.cs" />
     <Compile Include="Model\Blocks\YoutubeBlock.cs" />
