Add zipping for students, change ml for sandboxer back to 64mb

--- a/src/RunCsJob/RunCsJob.csproj
+++ b/src/RunCsJob/RunCsJob.csproj
@@ -75,7 +75,7 @@
     <Compile Include="MsBuildRunner.cs" />
     <Compile Include="Tests.cs" />
     <Compile Include="SandboxRunner.cs" />
-    <Compile Include="RunningResultsExtention.cs" />
+    <Compile Include="RunningResultsExtensions.cs" />
     <Compile Include="HttpClientExtensions.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="RunCsJobProgram.cs" />
