--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -6,6 +6,7 @@
   <package id="AngularJS.Core" version="1.5.0" targetFramework="net45" />
   <package id="AngularJS.Resource" version="1.5.0" targetFramework="net45" />
   <package id="AngularJS.Sanitize" version="1.5.0" targetFramework="net45" />
+  <package id="FluentAssertions" version="4.12.0" targetFramework="net45" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
