--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.1" targetFramework="net45" />
+  <package id="MSBuild" version="0.1.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
