--- a/src/courses/Linq/packages.config
+++ b/src/courses/Linq/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MarkdownDeep.NET" version="1.5" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
 </packages>
