--- a/src/uLearn.Tests/packages.config
+++ b/src/uLearn.Tests/packages.config
@@ -3,9 +3,13 @@
   <package id="ApprovalTests" version="3.0.8" targetFramework="net45" />
   <package id="ApprovalUtilities" version="3.0.8" targetFramework="net45" />
   <package id="FluentAssertions" version="4.9.1" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.1.1" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.1" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
